[gd_scene load_steps=7 format=3 uid="uid://dla6fxetre5pl"]

[ext_resource type="Script" path="res://sources/menus/minigame_selection.gd" id="1_8yhlq"]
[ext_resource type="FontFile" uid="uid://b2l4jfylc1v41" path="res://assets/fonts/DidactGothic-Regular.ttf" id="1_s5eb1"]
[ext_resource type="Texture2D" uid="uid://c3okdxpi317x5" path="res://assets/minigames/monkeys/graphic/gauge_icon_monkey_full.png" id="2_prxem"]
[ext_resource type="Texture2D" uid="uid://cq5wwf7y1msh7" path="res://assets/minigames/crabs/graphic/gauge_icon_crab_full.png" id="3_wq58l"]
[ext_resource type="Texture2D" uid="uid://di2qcv6jw8wh0" path="res://assets/minigames/parakeets/graphic/gauge_icon_parakeet_full.png" id="4_b8s0s"]
[ext_resource type="Texture2D" uid="uid://re7qgivb3n5w" path="res://assets/minigames/frog/graphics/gauge_icon_frog_full.png" id="6_bke25"]

[node name="MinigameSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8yhlq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -214.0
offset_right = 300.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="MonkeysButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s5eb1")
theme_override_font_sizes/font_size = 100
text = "Monkeys"
icon = ExtResource("2_prxem")
icon_alignment = 2
expand_icon = true

[node name="CrabsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s5eb1")
theme_override_font_sizes/font_size = 100
text = "Crabs"
icon = ExtResource("3_wq58l")
icon_alignment = 2
expand_icon = true

[node name="ParakeetsButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s5eb1")
theme_override_font_sizes/font_size = 100
text = "Parakeets"
icon = ExtResource("4_b8s0s")
icon_alignment = 2
expand_icon = true

[node name="FrogButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_s5eb1")
theme_override_font_sizes/font_size = 100
text = "Frog"
icon = ExtResource("6_bke25")
icon_alignment = 2
expand_icon = true

[connection signal="pressed" from="VBoxContainer/MonkeysButton" to="." method="_on_monkeys_button_pressed"]
[connection signal="pressed" from="VBoxContainer/CrabsButton" to="." method="_on_crabs_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ParakeetsButton" to="." method="_on_parakeets_button_pressed"]
[connection signal="pressed" from="VBoxContainer/FrogButton" to="." method="_on_frog_button_pressed"]
